--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title : "Turner's Blog"
 tagline: Site Tagline
 author :
   name : "Turner" 
-  email : "tpigott19@gmail.com" 
+  email : "turner@gild.com" 
   github : "tpigott19"
   twitter : 
   feedburner : feedname
